@@ -1,3 +1,9 @@
+2025-06-05  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-gvfs.el (tramp-gvfs-maybe-open-connection):
+	* tramp-rclone.el (tramp-rclone-maybe-open-connection):
+	Set "connected" property in time.
+
 2025-06-02  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-barf-if-file-missing): Do not raise an error
